--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
 .navbar{
     background-color: black;
+    border: 1px solid #9d9d9d;
     height: 100px;
-    border: 2px thin gray;
 }
 
 .hero{
-    background-color: rgb(85, 84, 69);
+    background-color: black;
 }
