--- a/assets/style.css
+++ b/assets/style.css
@@ -2,11 +2,6 @@
 .hero{
     background-color: black;
 }
-
-.columns{
-    border: 1px solid #9d9d9d;
-    margin-top: 10px;
-}
 nav{
     height: 100px;
     background-color: black;
@@ -20,3 +15,20 @@ nav{
     color: #ffc367;
 }
 
+.title {
+    text-align: center;
+    color: #ffc367;
+    font-size: 30px;
+    font-family: 'Monoton', cursive;
+   word-spacing: 10px;
+}
+
+.border{
+    border: 1px solid #9d9d9d;
+}
+
+input{
+    background-color: black;
+    color: #ffc367;
+
+}
