--- a/assets/style.css
+++ b/assets/style.css
@@ -28,16 +28,21 @@ nav{
     border: 1px solid #9d9d9d;
 }
 
-input{
+.sign-input{
     background-color: black;
     color: #ffc367;
+    
 }
 
 .column {
     text-align: center;
+
 }
 
 p{
     padding-bottom: 20px;
     font-size: 18px;
+}
+form{
+    padding-bottom: 20px;
 }
