--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ p{
     cursor:pointer;
     display:none;
     height:100%;
-    position:fixed;
+    position: fixed;
     text-align:center;
     top:0;
     width:100%;
@@ -69,6 +69,7 @@ p{
     max-width: 551px;
     min-height: 100px;
     vertical-align: middle;
+    text-align: center;
     width: 60%;
     position: relative;
     border-radius: 8px;
