COMPLETED: all functions for popups in the first columns. made popup appear centered. UPDATED index,style, and app

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@ p{
     cursor:pointer;
     display:none;
     height:100%;
-    position: fixed;
+    position: absolute;
     text-align:center;
     top:0;
     width:100%;
