--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,15 @@
 
 .hero{
-    background-color: black;
-}
-
-nav{
-    height: 100px;
-    background-color: black;
+    background-image: url(../icons/Pin\ on\ Desktop\ wallpapers.jpg);
+    height: 100vh;
 }
 
 .nav-title{
     font-family: 'Monoton', cursive;
-    font-size: 25px;
-    padding-top: 10px;
+    font-size: 30px;
     text-align: center;
     color: #ffc367;
+    padding: 40px;
 }
 
 .title {
@@ -22,6 +18,7 @@ nav{
     font-size: 30px;
     font-family: 'Monoton', cursive;
    word-spacing: 10px;
+   padding-top: 25px;
 }
 
 .border{
