--- a/assets/style.css
+++ b/assets/style.css
@@ -89,15 +89,11 @@ p{
     display: inline-block;
     font-weight: bold;
 }
-a, h4, h2, p {
+a, h4, h2 {
      color: #ffc367;
  }
  .footer {
      background-color: black;
-     color: #ffc367;
+     color: gold;
      padding-top: 5px;
  }
-
-#footer {
-    padding-top: 100px;
-}
