update github page & fixed title

--- a/assets/style.css
+++ b/assets/style.css
@@ -110,3 +110,9 @@ a, h4, h2, p {
 #footer {
     padding-top: 20px;
 }
+ 
+.yoda{
+    padding-top: 20px;
+    font-family: 'Monoton', cursive;
+    word-spacing: 10px;
+}
